--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
 	</head>
 	<body>
 		<header>
-			<img src="images/logo.png" alt="Dan's Bistro">
+			<img src="logo.png" alt="Dan's Bistro">
 			<h1>Dan's Bistro</h1>			
 		</header>
 		
@@ -23,5 +23,9 @@
 			<section id="specials">
 			</section>
 		</main>
+
+
+
+		<script> src = "specials.js" </script>
 	</body>
 </html>
